tests/pact/bad/bad-modules-disabled.repl
(env-exec-config ["DisableModuleInstall"])
(module M G
  (defcap G () true)
  (defun foo () true))
